[package]
name = "server1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
warp = "0.3"
futures-util = "0.3"
tokio-stream = "0.1.1"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
